--- a/client/src/components/css/CommentSection.css
+++ b/client/src/components/css/CommentSection.css
@@ -21,8 +21,9 @@
     background-color: cornflowerblue;
     border: none;
     color: white;
-    height: 40px;
+    height: 100%;
     width: 10%;
+    cursor: pointer;
 }
 
 .comment-heading{
