--- a/client/src/components/css/CommentSection.css
+++ b/client/src/components/css/CommentSection.css
@@ -21,7 +21,7 @@
     background-color: cornflowerblue;
     border: none;
     color: white;
-    height: 100%;
+    height: 50px;
     width: 10%;
     cursor: pointer;
 }
